# swagger-output.json
@@ -5,7 +5,7 @@
     "description": "API for managing cooking recipes and user accounts",
     "version": "1.0.0"
   },
-  "host": "localhost:8080",
+  "host": "localhost:8002",
   "basePath": "/",
   "tags": [
     {
@@ -15,14 +15,58 @@
     {
       "name": "Users",
       "description": "Endpoints for managing users"
+    },
+    {
+      "name": "Authentication",
+      "description": "Endpoints for authentication"
     }
   ],
   "schemes": [
-    "http",
-    "https"
+    "http"
   ],
+  "securityDefinitions": {
+    "githubAuth": {
+      "type": "oauth2",
+      "authorizationUrl": "https://github.com/login/oauth/authorize",
+      "flow": "implicit",
+      "scopes": {
+        "read:user": "Read user profile"
+      }
+    }
+  },
   "paths": {
-    "/recipes": {
+    
+    "/login": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/github/callback": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/logout": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/recipes/": {
       "get": {
         "tags": [
           "Recipes"
@@ -50,22 +94,22 @@
               "type": "object",
               "properties": {
                 "title": {
-                  "example":"Sample Recipe"
-                }, 
+                    "example": "Sample Recipe 123"
+                  },
                 "ingredients": {
-                  "example": "Ingredient 1, ingredient 2"
+                  "example": "ingredient A"
                 },
-                 "instructions": {
-                  "example": "Mix everything, and bake them."
-                 },
+                "instructions": {
+                  "example": "Mix everything"
+                },
                 "prep_time": {
-                  "example": 30
+                  "example": 11
                 },
                 "cook_time": {
-                  "example": "10"
+                  "example": 11
                 },
                 "servings": {
-                  "example": "8"
+                  "example": 11
                 }
               }
             }
@@ -78,21 +122,24 @@
           "400": {
             "description": "Bad Request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "500": {
             "description": "Internal Server Error"
           }
         }
       }
     },
-    "/recipes/{id}": {
+    "/recipes/{recipeId}": {
       "get": {
         "tags": [
           "Recipes"
         ],
-        "description": "Endpoint to get a specific recipe by ID",
+        "description": "",
         "parameters": [
           {
-            "name": "id",
+            "name": "recipeId",
             "in": "path",
             "required": true,
             "type": "string"
@@ -120,7 +167,7 @@
         "description": "Endpoint to update a recipe",
         "parameters": [
           {
-            "name": "id",
+            "name": "recipeId",
             "in": "path",
             "required": true,
             "type": "string"
@@ -132,13 +179,13 @@
               "type": "object",
               "properties": {
                 "prep_time": {
-                  "example": "any"
+                  "example": 0
                 },
                 "cook_time": {
-                  "example": "any"
+                  "example": 0
                 },
                 "servings": {
-                  "example": "any"
+                  "example": 0
                 }
               }
             }
@@ -150,6 +197,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
@@ -166,7 +216,7 @@
         "description": "Endpoint to delete a recipe",
         "parameters": [
           {
-            "name": "id",
+            "name": "recipeId",
             "in": "path",
             "required": true,
             "type": "string"
@@ -179,6 +229,9 @@
           "400": {
             "description": "Bad Request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Not Found"
           },
@@ -188,7 +241,7 @@
         }
       }
     },
-    "/users": {
+    "/users/": {
       "get": {
         "tags": [
           "Users"
@@ -197,6 +250,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -216,13 +272,13 @@
               "type": "object",
               "properties": {
                 "name": {
-                  "example": "Rakell"
+                  "example": "My name"
                 },
                 "email": {
-                  "example": "rakell@gmail.com"
-                },
+                  "example": "any@gmail.com"
+                }, 
                 "password": {
-                  "example":"cse123"
+                  "example": "123"
                 }
               }
             }
@@ -244,7 +300,7 @@
         }
       }
     },
-    "/users/{id}": {
+    "/users/{userId}": {
       "get": {
         "tags": [
           "Users"
@@ -252,7 +308,7 @@
         "description": "Endpoint to get a specific user by ID",
         "parameters": [
           {
-            "name": "id",
+            "name": "userId",
             "in": "path",
             "required": true,
             "type": "string"
@@ -264,6 +320,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
@@ -280,7 +339,7 @@
         "description": "Endpoint to update a user",
         "parameters": [
           {
-            "name": "id",
+            "name": "userId",
             "in": "path",
             "required": true,
             "type": "string"
@@ -292,7 +351,7 @@
               "type": "object",
               "properties": {
                 "email": {
-                  "example": "any"
+                  "example": "any@gmail.com"
                 },
                 "password": {
                   "example": "any"
@@ -307,6 +366,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "404": {
             "description": "Not Found"
@@ -326,7 +388,7 @@
         "description": "Endpoint to delete a user",
         "parameters": [
           {
-            "name": "id",
+            "name": "userId",
             "in": "path",
             "required": true,
             "type": "string"
@@ -339,6 +401,9 @@
           "400": {
             "description": "Bad Request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Not Found"
           },
@@ -348,111 +413,307 @@
         }
       }
     }
-
+   
   },
   "definitions": {
     "Recipe": {
       "type": "object",
       "properties": {
-        "title": {
+        "type": {
           "type": "string",
-          "example": "Chocolate Chip Cookies"
+          "example": "object"
         },
-        "description": {
-          "type": "string",
-          "example": "Classic homemade chocolate chip cookies"
-        },
-        "ingredients": {
-          "type": "array",
-          "items": {
-            "type": "object",
-            "properties": {
-              "name": {
-                "type": "string",
-                "example": "flour"
-              },
-              "amount": {
-                "type": "string",
-                "example": "2"
-              },
-              "unit": {
-                "type": "string",
-                "example": "cups"
-              },
-              "notes": {
-                "type": "string",
-                "example": "all-purpose"
+        "properties": {
+          "type": "object",
+          "properties": {
+            "title": {
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "string"
+                },
+                "example": {
+                  "type": "string",
+                  "example": "Chocolate Chip Cookies"
+                }
+              }
+            },
+            "description": {
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "string"
+                },
+                "example": {
+                  "type": "string",
+                  "example": "Classic homemade chocolate chip cookies"
+                }
+              }
+            },
+            "ingredients": {
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "array"
+                },
+                "items": {
+                  "type": "object",
+                  "properties": {
+                    "type": {
+                      "type": "string",
+                      "example": "object"
+                    },
+                    "properties": {
+                      "type": "object",
+                      "properties": {
+                        "name": {
+                          "type": "object",
+                          "properties": {
+                            "type": {
+                              "type": "string",
+                              "example": "string"
+                            },
+                            "example": {
+                              "type": "string",
+                              "example": "flour"
+                            }
+                          }
+                        },
+                        "amount": {
+                          "type": "object",
+                          "properties": {
+                            "type": {
+                              "type": "string",
+                              "example": "string"
+                            },
+                            "example": {
+                              "type": "string",
+                              "example": "2"
+                            }
+                          }
+                        },
+                        "unit": {
+                          "type": "object",
+                          "properties": {
+                            "type": {
+                              "type": "string",
+                              "example": "string"
+                            },
+                            "example": {
+                              "type": "string",
+                              "example": "cups"
+                            }
+                          }
+                        },
+                        "notes": {
+                          "type": "object",
+                          "properties": {
+                            "type": {
+                              "type": "string",
+                              "example": "string"
+                            },
+                            "example": {
+                              "type": "string",
+                              "example": "all-purpose"
+                            }
+                          }
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            },
+            "instructions": {
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "array"
+                },
+                "items": {
+                  "type": "object",
+                  "properties": {
+                    "type": {
+                      "type": "string",
+                      "example": "string"
+                    }
+                  }
+                },
+                "example": {
+                  "type": "array",
+                  "example": [
+                    "Preheat oven to 375°F",
+                    "Mix dry ingredients in a bowl"
+                  ],
+                  "items": {
+                    "type": "string"
+                  }
+                }
+              }
+            },
+            "prep_time": {
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "number"
+                },
+                "example": {
+                  "type": "number",
+                  "example": 15
+                }
+              }
+            },
+            "cook_time": {
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "number"
+                },
+                "example": {
+                  "type": "number",
+                  "example": 10
+                }
+              }
+            },
+            "servings": {
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "number"
+                },
+                "example": {
+                  "type": "number",
+                  "example": 24
+                }
+              }
+            },
+            "cuisine_type": {
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "string"
+                },
+                "example": {
+                  "type": "string",
+                  "example": "American"
+                }
+              }
+            },
+            "dietary_tags": {
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "array"
+                },
+                "items": {
+                  "type": "object",
+                  "properties": {
+                    "type": {
+                      "type": "string",
+                      "example": "string"
+                    }
+                  }
+                },
+                "example": {
+                  "type": "array",
+                  "example": [
+                    "vegetarian"
+                  ],
+                  "items": {
+                    "type": "string"
+                  }
+                }
               }
             }
           }
-        },
-        "instructions": {
-          "type": "array",
-          "example": [
-            "Preheat oven to 375°F",
-            "Mix dry ingredients in a bowl"
-          ],
-          "items": {
-            "type": "string"
-          }
-        },
-        "prep_time": {
-          "type": "number",
-          "example": 15
-        },
-        "cook_time": {
-          "type": "number",
-          "example": 10
-        },
-        "servings": {
-          "type": "number",
-          "example": 24
-        },
-        "cuisine_type": {
-          "type": "string",
-          "example": "American"
-        },
-        "dietary_tags": {
-          "type": "array",
-          "example": [
-            "vegetarian"
-          ],
-          "items": {
-            "type": "string"
-          }
-        },
-        "author_id": {
-          "type": "string",
-          "example": "65e0b8477541152a6e123123"
-        },
-        "image_url": {
-          "type": "string",
-          "example": "https://example.com/cookies.jpg"
         }
       }
     },
     "User": {
       "type": "object",
       "properties": {
-        "name": {
+        "type": {
           "type": "string",
-          "example": "Rakell Bandeira"
+          "example": "object"
         },
-        "email": {
-          "type": "string",
-          "example": "rakellbandeira@gmail.com"
-        },
-        "password": {
-          "type": "string",
-          "example": "hashedpass123"
-        },
-        "dietary_preferences": {
-          "type": "array",
-          "example": [
-            "vegetarian"
-          ],
-          "items": {
-            "type": "string"
+        "properties": {
+          "type": "object",
+          "properties": {
+            "name": {
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "string"
+                },
+                "example": {
+                  "type": "string",
+                  "example": "Rakell Bandeira"
+                }
+              }
+            },
+            "email": {
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "string"
+                },
+                "example": {
+                  "type": "string",
+                  "example": "rakellbandeira@gmail.com"
+                }
+              }
+            },
+            "password": {
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "string"
+                },
+                "example": {
+                  "type": "string",
+                  "example": "hashedpass123"
+                }
+              }
+            },
+            "dietary_preferences": {
+              "type": "object",
+              "properties": {
+                "type": {
+                  "type": "string",
+                  "example": "array"
+                },
+                "items": {
+                  "type": "object",
+                  "properties": {
+                    "type": {
+                      "type": "string",
+                      "example": "string"
+                    }
+                  }
+                },
+                "example": {
+                  "type": "array",
+                  "example": [
+                    "vegetarian"
+                  ],
+                  "items": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
           }
         }
       }
